[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "soft-clustering"
authors = [
  {name = "Kiyan Rezaee", email = "kiyanrezaee17@gmail.com"},
  {name = "Morteza Ziabakhsh", email = "morteza24mail@protonmail.com"},
]
readme = "README.rst"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]
dynamic = ["version", "description"]
dependencies = [
  "numpy",
  "scipy",
  "typeguard",
  "myst_parser"
]

[project.optional-dependencies]
deep = [
  "torch",
  "torch_geometric",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "scikit-learn",
]

[project.urls]
Homepage = "https://soft-clustering.readthedocs.io/en/latest/index.html"
Issues = "https://github.com/soft-clustering/soft-clustering/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["soft_clustering"]
omit = ["soft_clustering/test_*"]

[tool.coverage.report]
show_missing = true
